Final/pf.jj
	PARSER_BEGIN(PF)
	import java.io.PrintWriter;
	import java.io.FileOutputStream;
	import java.io.File;

public class PF 
{
  public static void main(String args[]) throws ParseException 
  {
  	String fullReturn = "";
    try 
    {
     
      PF parser = new PF(new java.io.FileInputStream(args[0]));
      fullReturn = parser.Input(fullReturn);
    }
    catch(java.io.FileNotFoundException e){	System.out.println("El archivo no esta..."); }
    try {
    	PrintWriter writer = new PrintWriter("result.html", "UTF-8");
		writer.println(fullReturn);
        writer.close();
    } catch (Exception e) { System.out.println("Output file cannot be created"); }
  }
  
}
PARSER_END(PF)

SKIP :
{
  " "
| "\t"
| "\n"
| "\r"
}

TOKEN :
{
	  < BA : "{" >
	| < BC : "}" >
	| < PA : "(" >
	| < PC : ")" >
	| < CA : "[" >
	| < CC : "]" >
	| < EQUAL : "=" >
	| < COMA : "," >
	| < PUNTO : "." >
	| < DP : ":" >
	| < PCOMA : ";" >
	| < GB : "_" >
	| < CREATE : "create" >
	| < PAGE : "page" >
	| < WITH : "with" >
	| < TABLE : "table" >
	| < CLASS : "class" >
	| < HEADERS : "headers" >
	| < HEADER : "header" >
	| < FOOTER : "footer" >
	| < SIDEBAR : "sidebar" >
	| < NAV : "nav" >
	| < DIV : "div" >
	| < ITEMS : "items" >
	| < AUDIO : "audio" >
	| < VIDEO : "video" >
	| < LIST : "list" >
	| < LINK : "link" >
	| < PARAGRAPH : "paragraph" >
	| < TITLE : "title" >
	| < SUBTITLE : "subtitle" >
	| < AND : "and" >
	| < COLUMNS : "columns" >
	| < ROWS : "rows" >
	| < STYLE : "style" >
	| < SMALLBLOCK : "smallBlock" >
	| < MEDIUMBLOCK : "mediumBlock" >
	| < LARGEBLOCK : "largeBlock" >
	| < YES : "yes" >
	| < NO : "no" >
	| < SECTION : "section" >
	| < IMAGE : "image" >
	| < SOURCE : "source" >
	| < WIDTH : "width" >
	| < PX : "px" >
	| < TIMES : "times" >
	| < HEIGHT : "height" >
	| < MOV : "mov" >
	| < MP4 : "mp4" >
	| < MP3 : "mp3" >
	| < WAV : "wav" >
	| < JPG : "jpg" >
	| < PNG : "png" >
	| < IDG : "id" >
	| < ID : ["a"-"z","A"-"Z"] ( ["a"-"z","A"-"Z","0"-"9"] )* >
	| < ENTERO : ["1"-"9"] (["0"-"9"])*>
	| < REAL : (["0"-"9"])* "." (["0"-"9"])*(["0"-"9"])*  >

}
String Input(String x):
{
	
	String node_string;
	Token title_a;
	System.out.println("Todo bien");}
{
	<CREATE><PAGE><WITH> <TITLE> title_a = <ID> <BA> node_string = Contenido() <BC><EOF>
	{
	x = "<!DOCTYPE html>\n";
	x += "<html>\n";
	x += "<head>\n";
	x += "<meta charset='UTF-8'>\n";
	x += "<title>";
	x += title_a.image;
	x += "</title>\n";
	x += "</head>\n";
	x += "<body>\n";
	x += node_string;
	//System.out.println(node_string);
	x += "</html>\n";
	return x;
	}
}
String Contenido():
{
	String current_string="";
	String temp = "";
	Token times;
}
{
	(temp = Content(){current_string += temp; }  (times=<ENTERO><TIMES>{current_string += times.image;})* )+ 
	{ 
	System.out.println(current_string);
		return current_string;	}
}
String Content():
{
	String curr;
	String acum;
	Token name;
	Token class_;
	Token text_type;
	Token description;
	String acum_desc = "";
}
{
	( acum = MediaStructures() <WITH> <CLASS> <EQUAL>  class_ = <ID> <AND> <IDG> <EQUAL> name = <ID> <PCOMA> 
	{ //This string concat is for Media 
		curr = acum;
		curr += " class = '" + class_.image + "' id = '" + name.image + "'"; 
		System.out.println(curr);
		return curr;
	}
	|  (text_type = <PARAGRAPH> | text_type =<TITLE> | text_type =<SUBTITLE>) <DP> (description = <ID>{acum_desc += " " + description.image;})+  <PCOMA> 
	{
		if(text_type.image == "paragraph") {

			curr = "<p>" + acum_desc + "</p>\n";
		}
		else if (text_type.image == "title"){
			curr = "<h1>" + acum_desc + "</h1>\n";
		}
		else if (text_type.image == "subtitle"){
			curr = "<h2>" + acum_desc + "</h2>\n";
		}
		else{ curr = "Error!!!!";}
		return curr;
	}
	|  StructureElementsWithElements() <PCOMA>
	{

		curr = "St";
		return curr;
	}
	| (text_type = <DIV> | text_type = <SECTION>) <WITH> <CLASS> <EQUAL> class_ = <ID> <AND> <IDG> <EQUAL> name = <ID> <PCOMA>
	{
		if(text_type.image == "div"){
			curr = "<div id = '"+ name.image +"' class= '" + class_.image + "' >";
		}
		else if (text_type.image == "section")
		{
			curr = "<section id = '"+ name.image +"' class= '" + class_.image + "' >";
		}
		else{
			curr = "Error!!!!";
		}
		
		return curr;
	}
	| (text_type = <HEADER> |text_type =  <FOOTER>) <BA>  StAttributes() <BC> <PCOMA>)
	{
		if(text_type.image == "header"){
			curr = "<header>";
		}
		else if (text_type.image == "footer")
		{
			curr = "<footer>";
		}
		else{
			curr = "Error!!!!";
		}
		return curr;
	}

	
}

void StAttributes():
{
	
}
{
	
	MediaStructures() StAttributes(){}
	| StructureElementsWithElements() StAttributes(){}
	| {}
}
void StructureElementsWithElements():
{}
{
	(<TABLE> <WITH> <BA> <PA> <ENTERO> <COLUMNS> <AND> <ENTERO> <ROWS> <PC> <CA> TableContent() <CC> <BC>
	| <LIST> <WITH> <ENTERO> <ITEMS>
	| <SIDEBAR> <WITH> <BA> AttributesForBar() <CA> (<ID>)+ <CC> <BC>
	| <NAV> <WITH> <BA> AttributesForBar() <BC>)
}
void TableContent():
{}
{
	(<PA> ((<ID>)+ | <ENTERO>) <PC>)*
}

void AttributesForBar():
{}
{
	<ENTERO> <ITEMS> <WITH> <STYLE> BarStyle()
}
void BarStyle():
{}
{
	(<SMALLBLOCK> | <MEDIUMBLOCK> | <LARGEBLOCK>)
}


String MediaStructures():
{
	String att_st_audio = "";
	String att_st_img = "";
	String att_st_video = "";
	String media_st = "";
}
{
	(<IMAGE> <BA> att_st_img = ImgAttributes() <BC>  {media_st += "<img src="; media_st += att_st_img; return media_st;} 
	| <AUDIO> <BA> att_st_audio = AudioAttributes() <BC> {media_st += "<audio>\n"; media_st += att_st_audio; media_st += "</audio>"; return media_st;} 
	| <VIDEO> <BA> att_st_video = MediaAttributes() <BC> ) <WITH> <CLASS> <EQUAL>  class_ = <ID> <AND> <IDG> <EQUAL> name = <ID> <PCOMA> {media_st += "<video>\n"; media_st += att_st_video; media_st += "</video>"; return media_st;} 
}
String MediaAttributes():
{String source_st = ""; Token file; Token format; Token width_video; Token height_video;}
{
	<SOURCE> (file = <ID> <PUNTO> (format = <MOV> |  format = <MP4>) ) <COMA> <WIDTH> <EQUAL> width_video = <ENTERO> <PX> <COMA> <HEIGHT> <EQUAL> height_video = <ENTERO> <PX>
	{source_st = "\t<source = '" + file.image + "." + format.image + "' width = '" + width_video.image + "px'"+" height = '" + height_video.image + "px'>";
	return source_st;}
}
String AudioAttributes():
{String source_st = ""; Token file; Token format;}
{
	<SOURCE>  (file = <ID> <PUNTO> (format = <MP3> | format = <WAV>) ) {source_st = "\t<source = '" + file.image + "." + format.image + "' type='audio/mpeg'>\n";
	return source_st;}
}
String ImgAttributes():
{	String source_st = ""; 
	Token width_img;
	Token height_img; 
	Token format; 
	Token file;
}
{
	<SOURCE>  (file = <ID> <PUNTO> (format = <JPG> | format = <PNG>) ) <COMA> <WIDTH> <EQUAL> width_img = <ENTERO> <PX> <COMA> <HEIGHT> <EQUAL> height_img = <ENTERO> <PX> 
	{
		source_st ="'" +file.image + "." + format.image + "' width = '" + width_img.image + "px' height = " + height_img.image + "px'";
	 	return source_st;
	}
}
